# Barycentrics12

./: .gitlab-ci.yml  README.md
barycentrics12/: .gitignore  CMakeLists.txt
barycentrics12/premake/: premake5.lua
barycentrics12/src/: Barycentrics12.cpp  Barycentrics12.h  D3D12Sample.cpp  D3D12Sample.h  Main.cpp  Window.cpp  Window.h  shaders.hlsl
premake/: amd_premake_util.lua
